[package]
name = "kepub"
version = "0.1.0"
edition = "2021"
description = "Recursively convert EPUB files into Kobo kepub format"
license = "MIT"

[[bin]]
name = "kepub"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
rayon = "1"
walkdir = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.36"
html5ever = "0.27"
markup5ever_rcdom = "0.3"
markup5ever = "0.12"

[profile.release]
lto = true
strip = true
